UserDto referenced in get id so lenghs appear in OpenAPI spec
